# messari-market-data-coding-challenge

./: Cargo.toml  README.md
src/: main.rs
src/aggregate_metrics/: mod.rs
src/aggregate_metrics/count/: mod.rs
src/aggregate_metrics/count/tests/: add_tests.rs  mod.rs  new_tests.rs
src/aggregate_metrics/mean_incremental/: mod.rs
src/aggregate_metrics/mean_incremental/tests/: add_tests.rs
src/aggregate_metrics/percentage/: mod.rs
src/aggregate_metrics/percentage/tests/: add_tests.rs  get_value_tests.rs  mod.rs
src/aggregate_metrics/sum/: mod.rs
src/aggregate_metrics/sum/tests/: add_tests.rs
src/aggregate_metrics/weighted_mean_incremental/: mod.rs
src/aggregate_metrics/weighted_mean_incremental/tests/: add_tests.rs  mod.rs
src/trade_aggregate_metrics/: mod.rs
src/trade_aggregate_metrics/tests/: add_trade_tests.rs  get_buy_order_percentage_tests.rs  mod.rs
